--- a/src/app/components/list-reserva/list-reserva.component.html
+++ b/src/app/components/list-reserva/list-reserva.component.html
@@ -80,7 +80,12 @@ a:hover{
 .azul {
     background-color: #0fa1eb;
   }
-
+  .filtrar{
+    margin: 10px;
+    display: flex;
+    width: 50%;
+ 
+}
 </style>
 <div id="contenedor">
             <!--CONTENIDO-->          
@@ -92,12 +97,31 @@ a:hover{
                 <i class="bi bi-plus-circle-fill"></i>
                 Nuevo</a>
           </nav>
-          <form class="input-group" style="width: 400px">
-            <input type="search" class="form-control" placeholder="# De Reservacion" aria-label="Search" />
-            <button class="btn btn-outline-default" type="button" data-mdb-ripple-color="dark" style="padding: .45rem 1.5rem .35rem;">
+          <div class="filtrar">
+            
+            <input *ngIf="reserva.opcion == '1'" type="search" class="form-control" placeholder="ID DE RESERVA" aria-label="Search"
+            [(ngModel)]="idR" name="idR" />
+
+            <input *ngIf="reserva.opcion == '2'" type="search" class="form-control" placeholder="CLIENTE" aria-label="Search"
+            [(ngModel)]="search" name="search" />
+
+            <input *ngIf="reserva.opcion == '3'" type="search" class="form-control" placeholder="VENDEDOR" aria-label="Search"
+            [(ngModel)]="vendedor" name="vendedor" />
+            
+            <!-- <button class="btn btn-outline-default" type="button" data-mdb-ripple-color="dark" style="padding: .45rem 1.5rem .35rem;">
               <i class="bi bi-search"> Buscar</i>
-            </button>
-          </form>
+            </button> -->
+
+            <div class="form-floating" style="width: 50%; height: -10%;">
+            <select class="form-select" aria-label="Default select example" [(ngModel)]="reserva.opcion" name="libros" >
+       
+              <option value="1">ID DE RESERVA</option>
+              <option value="2">CLIENTE</option>
+              <option value="3">VENDEDOR</option>
+            </select>
+            <label for="floatingTextarea">BUSCAR POR:</label>
+       </div>
+          </div>
 
           <div class="table-responsive">
             <table class="table">
@@ -113,7 +137,7 @@ a:hover{
                     </tr>
                   </thead>
                   <tbody>
-                    <tr  *ngFor="let r of reservas | paginate: { itemsPerPage: 5, currentPage: page }" >
+                    <tr  *ngFor="let r of reservas | paginate: { itemsPerPage: 5, currentPage: page } | bReservaNombre:search | bReservaID:idR | bReservaVendedor:vendedor" >
                       <th scope="row">{{r.idReserva}}</th>
                       <td>{{r.fechaCreacion}}</td>
                       <td>{{r.cuenta.usuario.nombres}} {{r.cuenta.usuario.apellidos}}</td>
