--- a/src/app/components/nota-venta/nota-venta.component.html
+++ b/src/app/components/nota-venta/nota-venta.component.html
@@ -80,6 +80,13 @@ a:hover{
   font-weight: bolder;
 }
 
+.filtrar{
+    margin: 10px;
+    display: flex;
+    width: 50%;
+ 
+}
+
 </style>
 <app-detalle-nota-v *ngIf="notaSeleccionada" [NotaV]="notaSeleccionada" style="display:block"></app-detalle-nota-v>
 <div id="contenedor">
@@ -92,12 +99,33 @@ a:hover{
                 <i class="bi bi-plus-circle-fill"></i>
                 Nuevo</a>
           </nav>
-          <form class="input-group" style="width: 400px">
-            <input type="search" class="form-control" placeholder="# De Nota De Venta" aria-label="Search" [(ngModel)]="search" name="search" />
-            <!-- <button class="btn btn-outline-default" type="button" data-mdb-ripple-color="dark" style="padding: .45rem 1.5rem .35rem;">
-              <i class="bi bi-search"> Buscar</i>
-            </button> -->
-          </form>
+         
+             <div class="filtrar">
+            
+        <input *ngIf="nota.opcion == '1'" type="search" class="form-control" placeholder=" # NOTA DE VENTA" aria-label="Search"
+        [(ngModel)]="search" name="search" /> 
+
+        <input *ngIf="nota.opcion == '2'" type="search" class="form-control" placeholder="VENDEDOR" aria-label="Search"
+        [(ngModel)]="vendedor" name="ced" />
+
+        <!-- <input *ngIf="nota.opcion == '3'" type="search" class="form-control" placeholder="CORREO" aria-label="Search"
+        [(ngModel)]="" name="" />
+         -->
+        <!-- <button class="btn btn-outline-default" type="button" data-mdb-ripple-color="dark" style="padding: .45rem 1.5rem .35rem;">
+          <i class="bi bi-search"> Buscar</i>
+        </button> -->
+
+        <div class="form-floating" style="width: 50%; height: -10%;">
+        <select class="form-select" aria-label="Default select example" [(ngModel)]="nota.opcion" name="cuenta" >
+   
+          <option value="1"># NOTA DE VENTA</option>
+          <option value="2">VENDEDOR</option>
+          <!-- <option value="3">EMAIL</option> -->
+        </select>
+        <label for="floatingTextarea">BUSCAR POR:</label>
+   </div>
+      </div>
+
 
           <div class="table-responsive">
             <table class="table">
@@ -111,7 +139,7 @@ a:hover{
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let not of venta | paginate: { itemsPerPage: 5, currentPage: page } | bNotasVenta:search">
+                    <tr *ngFor="let not of venta | paginate: { itemsPerPage: 5, currentPage: page } | bNotasVenta:search | bVentaVendedor:vendedor">
                       <th scope="row">{{not.idNotaventa}}</th>
                       <td>{{not.fechaRegistro}}</td>
                       <td>{{not.cuenta.usuario.nombres}} {{not.cuenta.usuario.apellidos}}</td>
